# try-redscript

./: Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
src/: default_code.reds  main.rs  natives.reds
